<resources>
    <string name="app_name">Loader</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_button_txt">Glide - Image loading library</string>
    <string name="loadapp_button_text">LoadApp - Repository for this app\'s starter code</string>
    <string name="retrofit_button_text">Retrofit - HTTP client library</string>
    <string name="toast_select_download_warning">Select a repository to download</string>
    <string name="filename_label">Filename:</string>
    <string name="status_label">Status:</string>
    <string name="ok">OK</string>
</resources>
